<resources>
    <string name="app_name">EasyIoT</string>
    <string name="connect">Connect</string>
    <string name="ip_address">IP Address</string>
    <string name="logoDescription">Logo of application EasyIoT</string>
    <string name="unable_to_connect">Unable to Connect</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="available_scripts">Scripts at Your disposal:</string>
    <string name="creator_name">Przemko Wawrzyniak</string>
    <string name="github_com_przwaw">github.com/przWaw</string>
    <string name="choose_script">Choose script</string>
    <string name="info">Info</string>
    <string name="scripts">Scripts</string>
    <string name="script_description">Script Description</string>
    <string name="about_me">About me</string>
    <string name="about_app">About App</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="script_name">Script Name</string>
    <string name="script_is_running">Script is running...</string>
    <string name="execute_script">Execute Script</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. Id minima totam aut recusandae autem vel dolorem deleniti qui delectus possimus aut fugit quibusdam sed voluptates galisum aut nostrum quidem. Et repellendus porro sit optio omnis et inventore repellendus vel commodi perspiciatis rem facere aspernatur qui magnam maxime. Aut ducimus earum rem voluptatem delectus quo quae voluptatem ut perferendis maxime est consequatur voluptas? Qui nostrum possimus est quis voluptatum aut illum ipsa aut quaerat facere id nobis illum. Ut explicabo galisum aut nostrum blanditiis et voluptatem rerum. Sit ipsa sunt vel totam mollitia vel nobis explicabo ut repellat inventore At voluptatum necessitatibus. Cum consectetur rerum sit dolor natus sed eveniet Quis et quia illum. Sed dolorem neque sed odit internos sed repellat provident qui velit voluptates et corporis corporis. Ad exercitationem maxime et voluptatem repellendus et consequuntur accusantium sed consequatur voluptatem.</string>
    <string name="start_script">Start Script</string>
    <string name="backend_repository">Backend Repository</string>
    <string name="mobile_app_repository">Mobile App Repository</string>
    <string name="about_app_desc">This application was created as a bridge between the user and the IoT. Its main purpose is to give the user access to various functions available through connection with aspberryPi. The main function is to browse the scripts available for execution and run them remotely with one click. The script will be executed by the RPi and the result of the script will be returned to the user\'s screen. Information about errors appearing during the task execution will also be returned.</string>
    <string name="github_account">Github Account</string>
</resources>