<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoOnStartScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        app:srcCompat="@drawable/easy_iot_logo"
        android:contentDescription="@string/logoDescription" />

    <EditText
        android:id="@+id/IpAddressInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/ip_address"
        android:inputType="text"
        android:autofillHints="none"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <Button
        android:id="@+id/ConnectButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:backgroundTint="@color/main_green"
        android:text="@string/connect"
        app:cornerRadius="0dp" />

</LinearLayout>
