<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HelloFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/Logo.Background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/easy_iot_logo_transparent"
            style="@style/Logo.Background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/let_s_start"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            style="@style/Text.White" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/available_scripts"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            style="@style/Text.White" />
        <TextView
            android:id="@+id/numberOfAvailableScripts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            style="@style/Text.White" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>


    </LinearLayout>
</layout>