<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".Fragments.AboutApp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:elevation="5sp"
            app:cardCornerRadius="25sp">

            <LinearLayout
                android:id="@+id/inCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20sp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:text="@string/about_app_desc"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/backendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/github"
                    android:drawablePadding="8sp"
                    android:drawableTint="#ffffff"
                    android:text="@string/backend_repository" />

                <Button
                    android:id="@+id/appButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/github"
                    android:drawableTint="#ffffff"
                    android:text="@string/mobile_app_repository" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>